rebranded and refacted tip icon for the tip button

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $lighter_font_color: #7d7e83;
 $border_color: #bcbcc0;
 $white_color: #21212a;
 $red_color: #ff4952;
+$neo_blue_color: #1161fe;
 
 $actions_ribbon_background_color: #0f0f0f;
 $search_nav_border_color: #707070;
