--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,5 @@
 @import '~fontsource-ibm-plex-sans/500-normal.css';
 @import '~fontsource-ibm-plex-sans/700-normal.css';
 @import '~fontsource-ibm-plex-sans/700-italic.css';
+
+@import '~typeface-roboto/index.css';
