--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,7 +19,7 @@ $thumbnail_background_color: #0f0f0f;
 $thumbnail_background_color_alt: #272727;
 $preview_description_font_color: #90909c;
 $buttons_background: #141414;
-$card_border_color: #2f2f2f;
+$card_border_color: #131313;
 $card_hover_color: #191919;
 
 $super_dark: #0f0f0f;
